2nd training/Community/Community/Community1/force-app/main/default/objects/Agent__c/fields/Agent_Name__c.field-meta.xml
<CustomField>
    <fullName>Agent_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Agent Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>R00N2000000125MrEAI</relationshipName>
    <type>Lookup</type>
</CustomField>