2nd training/Community/Community/Community1/force-app/main/default/objects/Agent__c/fields/Agent_Number__c.field-meta.xml
<CustomField>
    <fullName>Agent_Number__c</fullName>
    <displayFormat>A-{000000}</displayFormat>
    <label>Agent Number</label>
    <type>AutoNumber</type>
</CustomField>