2nd training/Community/Community/Community1/force-app/main/default/objects/Agent__c/fields/Approved_Vendor__c.field-meta.xml
<CustomField>
    <fullName>Approved_Vendor__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is this Agent on our AVL ?</description>
    <label>Approved Vendor</label>
    <type>Checkbox</type>
</CustomField>