2nd training/Community/Community/Community1/force-app/main/default/objects/Agent__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <label>City</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Aarhus</fullName>
            </value>
            <value>
                <fullName>Aberdeen</fullName>
            </value>
            <value>
                <fullName>Abidjan</fullName>
            </value>
            <value>
                <fullName>Abu Dhabi</fullName>
            </value>
            <value>
                <fullName>Accra</fullName>
            </value>
            <value>
                <fullName>Adelaide</fullName>
            </value>
            <value>
                <fullName>Alblasserdam (Rotterdam)</fullName>
            </value>
            <value>
                <fullName>Alger</fullName>
            </value>
            <value>
                <fullName>Almaty</fullName>
            </value>
            <value>
                <fullName>Alphen aan den Rijn</fullName>
            </value>
            <value>
                <fullName>Amman</fullName>
            </value>
            <value>
                <fullName>Ankara</fullName>
            </value>
            <value>
                <fullName>Antananarivo</fullName>
            </value>
            <value>
                <fullName>Antwerpen</fullName>
            </value>
            <value>
                <fullName>Arnhem</fullName>
            </value>
            <value>
                <fullName>Asuncion</fullName>
            </value>
            <value>
                <fullName>Athens</fullName>
            </value>
            <value>
                <fullName>Atlanta</fullName>
            </value>
            <value>
                <fullName>Auckland</fullName>
            </value>
            <value>
                <fullName>Aylesbury</fullName>
            </value>
            <value>
                <fullName>Bangkok</fullName>
            </value>
            <value>
                <fullName>Barcelona</fullName>
            </value>
            <value>
                <fullName>Basel</fullName>
            </value>
            <value>
                <fullName>Bath</fullName>
            </value>
            <value>
                <fullName>Beijing</fullName>
            </value>
            <value>
                <fullName>Beirut</fullName>
            </value>
            <value>
                <fullName>Belfast</fullName>
            </value>
            <value>
                <fullName>Bergen</fullName>
            </value>
            <value>
                <fullName>Berlin</fullName>
            </value>
            <value>
                <fullName>Bern</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>