2nd training/Community/Community/Community1/force-app/main/default/objects/Agent__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipName>R00N2000000125MoEAI</relationshipName>
    <type>Lookup</type>
</CustomField>