2nd training/Community/Community/Community1/force-app/main/default/objects/Agent__c/fields/FIDI_Member__c.field-meta.xml
<CustomField>
    <fullName>FIDI_Member__c</fullName>
    <defaultValue>false</defaultValue>
    <description>FIDI Member or not ?</description>
    <label>FIDI Member</label>
    <type>Checkbox</type>
</CustomField>