2nd training/Community/Community/Community1/force-app/main/default/objects/Agent__c/fields/HHGFAA_Member__c.field-meta.xml
<CustomField>
    <fullName>HHGFAA_Member__c</fullName>
    <defaultValue>false</defaultValue>
    <description>HHGFAA Member ?</description>
    <label>HHGFAA Member</label>
    <type>Checkbox</type>
</CustomField>